Added the classes with different ways of implementing callback methods
	- Class StudentDAO --> Using XML
	- Class Hello		--> Using interface
	- Class Hi			--> using annotation

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # Compiled class file
 *.class
+/target/*
+
 
 # Log file
 *.log
@@ -10,6 +12,10 @@
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
+# IDE files
+.settings/*
+.project
+.classpath
 # Package Files #
 *.jar
 *.war
